# imaimai-front-templete

./: .env.example  .env.local.example  .gitattributes  .gitignore  .mcp.json  .oxlintrc.json  AGENTS.md  CI_CD.md  CLAUDE.md  CLAUDE.xml  GEMINI.md  KIRO_PROMPT.md  LICENSE  README.md  TROUBLESHOOTING.md  biome.json  bun.lockb  docker-compose.yml  drizzle.config.ts  knip.json  lefthook.yml  package.json  tsconfig.json  vite.config.ts  vitest.config.mts  wrangler.toml
.aegis/: .gitignore  aegis.db
.claude/: code-graph.json  settings.json
.cursor/: mcp.json
.github/: dependabot.yml
.husky/: commit-msg
.serena/: project.yml
aegis-share/: canonical.json  manifest.json
backend/: .gitignore  .mise.toml  CLAUDE.md  README.md  Taskfile.yml  alembic.ini  implementation-guide.md  pyproject.toml
backend/docker/: Dockerfile  docker-compose.yml
backend/src/: main.py
backend/src/db/: base.py  database.py  utils.py
backend/src/db/logs/: .gitkeep
backend/src/db/migrations/: env.py
backend/src/db/migrations/versions/: 0001_create_sample_table_table.py
backend/src/db/models/: README.md  __init__.py  base.py  sample.py
backend/src/script/: migration_safety.py
backend/src/script/auto_migrate/: README.md  __init__.py  __main__.py  auto_migrate.py  config.py  test_auto_migrate.py
backend/tests/: test_main.py
docs/: DATABASE_SETUP.md  SUPABASE_SETUP.md  agent-workflow.md  component-guidelines.md  naming-conventions.md  storybook-guidelines.md  testing-guidelines.md  ux-psychology-best-practices.md  web-design-best-practices.md
frontend/: .gitignore  (+2 more)
(+240 files in other folders)
